<resources>
    <string name="app_name">Tip Tap</string>
    <string name="main_screen_btn_text">Let\'s play</string>
    <string name="sign_up_info_text">Every user on our platform has a unique name, by which we recognise them. So ,</string>
    <string name="login_screen_hint">What should we call you ?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="game_1">Remember the cards</string>
    <string name="game_2">Find the number</string>
    <string name="game_3">Jumbled\n Words</string>
    <string name="game_4">The Quiz</string>
    <string name="find_the_number">Find \nthe \nNumber</string>
    <string name="remember_card">Remember \nthe \nCard</string>
    <string name="time_left">%s sec</string>
    <string name="find_the_number_game_name">Find the Number</string>
    <string name="rem_the_card_game_name">Remember the Card</string>
    <string name="jumbled_words_game_name">Jumbled words</string>
    <string name="game_exit_title">Exit Game ?</string>
    <string name="game_exit_content">Are you sure you want to exit this game ? This game progress will be lost forever.</string>
    <string name="game_exit_positive_btn_txt">Exit</string>
    <string name="game_exit_negative_btn_txt">No</string>
    <string name="game_pause_title">Game Paused</string>
    <string name="game_pause_content">You game is paused. Do you wish to resume or exit ?</string>
    <string name="game_pause_positive_btn_txt">Resume</string>
    <string name="game_pause_negative_btn_txt">Exit</string>
    <string name="game_complete_title">Time Over</string>
    <string name="rem_the_card_game_complete_title">Level Complete</string>
    <string name="jumbled_game_complete_title">Level Complete</string>
    <string name="game_complete_infinite_title">Game Over</string>
    <string name="game_complete_content">Congo!!, You have completed this level. You scored %s in %s seconds</string>
    <string name="rem_the_card_game_complete_content">Congo!!, You have completed this level in %s moves.</string>
    <string name="jumbled_game_endless_complete_content">Congo!!, You have completed this level in %s seconds</string>
    <string name="jumbled_game_time_bound_complete_content">Congo!!, You have formed %s words in %s seconds</string>
    <string name="game_complete_infinite_content">Congo!!, You have played %s seconds and scored %s points</string>
    <string name="game_complete_negative_btn_txt">Exit</string>
    <string name="game_complete_positive_btn_txt">Next</string>
    <string name="current_level">Level %s</string>
    <string name="play_endlessly">Play Endless</string>
    <string name="create_game">Create Game</string>
    <string name="game_retry_btn_txt">Retry</string>
    <string name="longest_played">Longest played\n%s seconds</string>
    <string name="best_score">Best Score\n%s</string>
    <string name="total_games_text">Total games : %s</string>
    <string name="total_time_played">Total time : %s minutes</string>
    <string name="go_to_game">Go to game</string>
    <string name="you_have_s_seconds_to_remember_the_cards">You have %s seconds to remember the cards</string>
    <string name="best_score_in_level">Best score : %s points in level %s</string>
    <string name="total_time_mins">Total time : %s minutes</string>
    <string name="total_games">"Total games : %s "</string>
    <string name="current_level_on">Current Level : %s</string>
    <string name="never_played">Never played</string>
    <string name="all_level_complete_msg">Wooaaaa!!!, Game finished..You can try improving scores of previous levels to get on top of leader board or wait for new updates with new levels and games</string>
    <string name="get_extra_coins_tv"><u>Get %s extra time</u></string>
</resources>