<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layer_list_card">
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/rem_the_card_game_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/screen_mg"
        android:text="@string/rem_the_card_game_name"
        android:textSize="@dimen/app_text_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/score_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rem_the_card_game_name_tv">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/rem_the_card_best_score_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/screen_mg"
            android:text="@string/total_games_text"
            android:textSize="@dimen/app_text_size_small"
            app:layout_constraintEnd_toStartOf="@+id/rem_the_card_best_time_tv"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/rem_the_card_best_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/screen_mg"
            android:text="@string/total_time_played"
            android:textSize="@dimen/app_text_size_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/rem_the_card_best_score_tv"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/score_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/screen_mg">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/best_score_tv"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/screen_mg"
            tools:text="Best Score : 12"
            android:textSize="@dimen/app_text_size_small"
            app:layout_constraintEnd_toStartOf="@+id/best_time_tv"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/best_time_tv"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/screen_mg"
            tools:text="Best Time : 45 selects in 15 sec"
            android:textSize="@dimen/app_text_size_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/best_score_tv"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/screen_mg"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <com.ck.dev.tiptap.ui.custom.CustomButtonView
            android:id="@+id/rem_the_card_time_bound_play"
            style="@style/MenuButtonStyle"
            android:text="Time Bound"
            app:leftIcon="@drawable/ic_timer" />

        <com.ck.dev.tiptap.ui.custom.CustomButtonView
            android:id="@+id/rem_the_card_infinite_game_play"
            style="@style/MenuButtonStyle"
            android:text="Endless"
            app:leftIcon="@drawable/ic_infinite" />

    </LinearLayout>

</RelativeLayout>
