<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/find_the_num_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDarkColor"
    tools:context=".ui.games.findthenumber.PlayGameScreenFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/live_timer_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/screen_mg"
        android:layout_marginTop="@dimen/screen_mg"
        android:backgroundTint="@color/primaryLightColor"
        app:cardCornerRadius="@dimen/_20sdp"
        app:cardElevation="@dimen/_minus12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/level_tv">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/layer_list_card"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/time_left_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_12sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_12sdp"
                android:gravity="center"
                android:text="Time left"
                android:textSize="@dimen/app_text_size_medium" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/timer_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:gravity="center"
                android:text="@string/time_left"
                android:textSize="@dimen/app_text_size_medium" />


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/live_score_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/screen_mg"
        android:backgroundTint="@color/primaryLightColor"
        app:cardCornerRadius="@dimen/_20sdp"
        app:cardElevation="@dimen/_minus12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/live_timer_container">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/layer_list_card"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginBottom="0dp"
                android:gravity="center"
                android:text="Score"
                android:textSize="@dimen/app_text_size_medium" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/live_score_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:gravity="center"
                android:text="999"
                android:textSize="@dimen/app_text_size_medium" />


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/game_cont"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/live_timer_container" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/reload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/screen_mg"
        android:background="@color/primaryLightColor"
        android:padding="@dimen/_4sdp"
        android:text="RELOAD"
        android:textSize="@dimen/app_text_size_small"
        app:layout_constraintBottom_toTopOf="@id/game_cont"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/game_cont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/moving_num_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryLightColor"
            android:padding="@dimen/_4sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/live_timer_container">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/grid_num_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/screen_mg"
                android:background="@color/primaryLightColor"
                android:padding="@dimen/_12sdp" />

        </RelativeLayout>
        <!-- <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/moving_num_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:background="@color/primaryLightColor"
             android:padding="@dimen/_4sdp"
             app:layout_constraintBottom_toTopOf="@id/grid_num_list"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/live_timer_container" />-->


    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/pause_play_block"
        style="@style/CustomCardViewStyle"
        app:drawableTopCompat="@drawable/ic_pause_game"
        android:text="Pause"
        android:background="@drawable/layer_list_card"
        app:layout_constraintTop_toTopOf="@id/live_timer_container"
        app:layout_constraintBottom_toBottomOf="@id/live_score_container"
        app:layout_constraintStart_toEndOf="@id/live_timer_container"
        app:layout_constraintEnd_toStartOf="@id/live_score_container"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/finish_block"
        style="@style/CustomCardViewStyle"
        app:drawableTopCompat="@drawable/ic_finish"
        android:visibility="gone"
        android:text="Finish Game"
        android:background="@drawable/layer_list_card"
        app:layout_constraintTop_toTopOf="@id/live_timer_container"
        app:layout_constraintBottom_toBottomOf="@id/live_score_container"
        app:layout_constraintStart_toEndOf="@id/live_timer_container"
        app:layout_constraintEnd_toStartOf="@id/live_score_container"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/level_tv"
        style="@style/CustomCardViewStyle"
        android:text="@string/current_level"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/longest_played_tv"
        style="@style/CustomCardViewStyle"
        android:text="@string/longest_played"
        android:gravity="center"
        android:visibility="gone"
        android:layout_marginStart="@dimen/screen_mg"
        android:layout_marginTop="@dimen/screen_mg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/live_timer_container" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/best_score_tv"
        style="@style/CustomCardViewStyle"
        android:visibility="gone"
        android:text="@string/best_score"
        android:gravity="center"
        android:layout_marginEnd="@dimen/screen_mg"
        android:layout_marginTop="@dimen/screen_mg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/live_score_container" />
</androidx.constraintlayout.widget.ConstraintLayout>